Revert "Artist. Event, Venue added"
This reverts commit 13e2ea570e656d62c9c14e55ec5d890dc8c30ec7.

--- a/.target/.gitignore
+++ b/.target/.gitignore
@@ -1,7 +1,6 @@
-/ApplicationTest.class
-/IntegrationTest$1.class
-/IntegrationTest.class
-/TestHttpRequestManager.class
 /controllers
 /models
 /views
+
+*.html
+*.class
